--- a/html/ceps.html
+++ b/html/ceps.html
@@ -13,6 +13,7 @@
     <link rel="icon" href="../css/img/logo-topo.PNG" type="image/x-icon">
     <link rel="stylesheet" href="../css/ceps.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFuVhG0e31z5DrQ1m5UACEiOqhZcGzuJA&callback=initMap"></script> 
 </head>
 <body>
 
@@ -21,9 +22,7 @@
         <i class="fas fa-arrow-left"></i> Voltar
     </a>
 
-    <div class="container2">
-        <img src="../css/img/mapa.png" alt="Imagem" class="imagem-direita">
-    </div>
+    <div id="map" class="imagem-direita"></div>
 
 <!-- Container Principal -->
 <div class="container">
