--- a/html/detalhesMotorista.html
+++ b/html/detalhesMotorista.html
@@ -61,7 +61,8 @@
             <p id="motoristaCpf"></p>
             <p id="motoristaCnh"></p>
             <p id="motoristaDataNascimento"></p>
-            <p id="motoristaDisponibilidade"></p>            
+            <p id="motoristaDisponibilidade"></p>           
+            <button id="adicionar-equipe" style="display:none;">Adicionar à Equipe</button> 
         </section>
 
     </main>
