--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -121,7 +121,7 @@
                     gerenciamento da sua frota e tomar decisões mais assertivas.</p>
             </div>
             <div class="image-message">
-                <img src="../css/img/caminhaohome.jpg" alt="caminhao">
+                <img src="../css/img/homecaminhao.jpg" alt="caminhao">
             </div>
         </div>
         <div class="dashboard-container">
