--- a/html/viagens.html
+++ b/html/viagens.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="../css/root.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/notificacao.css">
+    <link rel="icon" href="../css/img/LOGO.png" type="image/x-icon">
+
     <script src="../js/funcoes.js" type="module" defer></script>
     <script src="../js/viagens.js" type="module" defer></script>
 </head>
